# cargo_usage_rules

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  base.md  rustfmt.toml
.github/workflows/: sampo_releaser.yml
.sampo/: config.toml
.sampo/changesets/: steadfast-prince-marjatta.md  venerable-iceseeker-tursas.md
src/: aggregator.rs  cli.rs  main.rs  metadata.rs  scanner.rs  writer.rs
tests/: end_to_end_test.rs
tests/fixtures/test-workspace/: Cargo.toml
tests/fixtures/test-workspace/lib-empty/: Cargo.toml
tests/fixtures/test-workspace/lib-empty/src/: lib.rs
tests/fixtures/test-workspace/lib-no-main/: Cargo.toml
tests/fixtures/test-workspace/lib-no-main/src/: lib.rs
tests/fixtures/test-workspace/lib-no-main/usage_rules/: orphan.md
tests/fixtures/test-workspace/lib-simple/: Cargo.toml  usage-rules.md
tests/fixtures/test-workspace/lib-simple/src/: lib.rs
tests/fixtures/test-workspace/lib-with-subs/: Cargo.toml  usage-rules.md
tests/fixtures/test-workspace/lib-with-subs/src/: lib.rs
tests/fixtures/test-workspace/lib-with-subs/usage_rules/: async.md  builder.md
tests/fixtures/test-workspace/main-crate/: Cargo.toml
tests/fixtures/test-workspace/main-crate/src/: main.rs
tests/fixtures/test-workspace/main-crate/usage_rules/lib-nested-deep/: lib-nested-deep.md
tests/fixtures/test-workspace/main-crate/usage_rules/lib-nested-deep/level1/level2/: level3.md
tests/fixtures/test-workspace/main-crate/usage_rules/lib-with-subs/: lib-with-subs.md
tests/helpers/: fixture_builder.rs  mod.rs
