[package]
name = "cargo-usage-rules"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Pollack"]
description = "A cargo subcommand to aggregate usage-rules.md files from Rust dependencies for AI agent consumption"
repository = "https://github.com/yourusername/cargo-usage-rules"
license = "MIT OR Apache-2.0"
keywords = ["cargo", "subcommand", "ai", "llm", "documentation", "agents"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
